# AudioVisualizer

./: .gitignore  AudioVisualizer.cpp  AudioVisualizer.hpp  CMakeLists.txt  LICENSE  README.md
Example/include/: Application.hpp
Example/src/: Application.cpp  Main.cpp
example/include/: Application.hpp
example/src/: Application.cpp  Main.cpp
